--- a/styles.css
+++ b/styles.css
@@ -120,10 +120,33 @@ img {
   padding: 0.5rem 0;
 }
 
+/* Logo Styles */
 #navbar .logo {
-  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+#navbar .logo a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+}
+
+.logo-image {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  margin-bottom: 0.5rem;
+}
+
+.logo-text {
+  font-size: 1.2rem;
   font-weight: bold;
   color: var(--primary-color);
+  white-space: nowrap;
 }
 
 #navbar ul {
@@ -308,6 +331,15 @@ img {
   
   #navbar ul {
     margin-top: 1rem;
+  }
+  
+  .logo-image {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .logo-text {
+    font-size: 1rem;
   }
   
   .vision-mission {
